# hermes-openai-proxy

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: brave-leo-config.md
examples/: config.yaml  curl-examples.sh
hermes_openai_proxy/: __init__.py  __main__.py  _service.py  _service_lock.py  _tray.py  config.py  credentials.py  providers.py  reasoning.py  server.py  service_paths.py
tests/: test_interactive.py  test_smoke.py
